--- a/src/css/registration.css
+++ b/src/css/registration.css
@@ -1,9 +1,5 @@
-.card-registration .select-input.form-control[readonly]:not([disabled]) {
-    font-size: 1rem;
-    line-height: 2.15;
-    padding-left: .75em;
-    padding-right: .75em;
+@media (min-width: 1025px) {
+    .h-custom {
+    height: 100vh !important;
     }
-    .card-registration .select-arrow {
-    top: 13px;
     }
